gcc/testsuite/gdc.test/runnable/imports/test10441c.d

auto boo(T)(T t)
{
    return 1;
}

