gcc/testsuite/gdc.test/fail_compilation/imports/imp22329.d
void func(T)(T arg)
{
    auto a = arg + 1;
}
